Make truetype subsetting work on x86_64

This fixes the bug reported against GTK+ here:
	http://bugzilla.gnome.org/show_bug.cgi?id=349826